# all_projects

./: .gitignore  README.md  pyproject.toml
alphazero/: ReadMe.md  main.py
alphazero/notebooks/: alphazero_trainer.ipynb
alphazero/src/: alphazero.py  connect_four.py  mcts.py  model.py  tictactoe.py
alphazero/tests/: test_tictactoe.py
amortization_sheet/: amortization_calculator.js  input_reader.js  main.js  utils.js
cat_game_rl/src/: env_bill_of_materials.py  env_game_clock.py  env_game_economy.py  env_game_world.py  env_item_facilities.py  env_manufacturing_unit.py  rl_action_calculator.py  rl_cat_game_env.py  rl_reward_calculator.py  rl_state_calculator.py
cat_game_rl/src/environment/: agent.py  bill_of_materials.py  control_policy.py  game_clock.py  game_economy.py  game_world.py  item_facilities.py  manufacturing_unit.py  rewards.py  utils.py
cat_game_rl/src/loaders/: init_game_economy.yml
expenditure_sheet/: main.js  make_new_sheets.js  mark_various_days.js  utils.js
helder_resume/altacv/: altacv.cls  main.tex  page1sidebar.tex
helder_resume/altacv/section/: header.tex  workexperience.tex
helder_resume/src/: format.cls  main.tex
helder_resume/src/sections/: awards.tex  education.tex  (+8 more)
helder_resume/twentysecondscv/: resume.cls  resume.tex
ieee_bengaluru_mobility_challenge/data/: s3_urls.txt
kaggle_severestal/: ReadMe.md
kaggle_severestal/notebooks/: kaggle_severstal.ipynb
kaggle_severestal/src/: train.py
kaggle_severstal/notebooks/: 03_model_training.ipynb
kaggle_severstal/src/: train.py
stable_diffusion/src/: autoencoder.py
wos/src/: world_of_supply_renderer.py
(+36 files in other folders)
