[tool.poetry]
name = "any_project_template"
version = "0.1.0"
description = ""
authors = ["Ankit Haldar <ankithaldar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightning = "^2.5.0.post0"
matplotlib = "^3.10.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
pytest = "^8.3.5"
pyyaml = "^6.0.2"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
scrapy = "^2.12.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
tensorflow = "^2.18.0"
torch = "^2.6.0"
torchaudio = "^2.6.0"
torchmetrics = "^1.6.2"
torchvision = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
