[tool.poetry]
name = "any_project_template"
version = "0.1.0"
description = ""
authors = ["Ankit Haldar <ankithaldar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
numpy = "^1.26.4"
tensorflow = "^2.16.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
